mobile scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
 }
 
 html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+html,
 button {
     font-family: 'Nunito', sans-serif;
     letter-spacing: .5px;
